<resources>
    <string name="app_name">LabExam2</string>
    <string name="label_Login">Login</string>
    <string name="label_Username">Username</string>
    <string name="label_Password">Password</string>
    <string name="label_Order">Order</string>
    <string name="label_time">Enter PickUp Time</string>
    <string name="label_MyOrder">My Order</string>
    <string name="label_Items">Items</string>
    <string name="label_Amount">Amount(RS)</string>
    <string name="label_Quantity">Quantity</string>
    <string name="label_Total">Total Amount</string>
    <string name="label_Profile">Profile</string>
    <string name="label_Fname">First Name</string>
    <string name="label_email">Email</string>
    <string name="label_Acc">Acc Number</string>
    <string name="label_exp">Exp Date</string>
    <string name="label_Reg">Register Now</string>
    <string name="label_PaymentOptions">Payment Options</string>
    <string name="label_Online">Online</string>
    <string name="label_Offline">Offline</string>
    <string name="label_Success">You Have Successfully Place the Order!</string>
    <string name="label_ifReg">If Registered?</string>
    <string name="label_OrderID">Order ID is 2035eve15</string>
    <string name="label_TodaySpecial">Today\'s Special</string>
    <string name="label_Choose">Choose a Meal</string>
    <string name="label_Lump">Lump Rice</string>
    <string name="label_Nasi">Nasi Goreng</string>
    <string name="label_Breakfast">Breakfast</string>
    <string name="label_Lunch">Lunch</string>
    <string name="label_TeaTime">TeaTime</string>
    <string name="label_EggRoll">Egg Roll</string>
    <string name="label_VegRoll">Veg Roll</string>
    <string name="label_SHoppers">S. Hoppers</string>
    <string name="label_Noodles">Noodles</string>
    <string name="label_FishBun">Fish Bun</string>
    <string name="label_Paratha">Paratha</string>
    <string name="label_FriedC">Fried Rice C</string>
    <string name="label_RiceC">Rice&amp;Curry C</string>
    <string name="label_RiceV">Rice&amp;Curry V</string>
    <string name="label_TeaBun">Tea Bun</string>
    <string name="label_Pattis">Pattis</string>
    <string name="label_ButterCake">Butter Cake</string>
    <string name="label_ChocCake">Choc Cake</string>

    <string name="label_100">RS.100</string>
    <string name="label_130">RS.130</string>
    <string name="label_120">RS.120</string>
    <string name="label_150">RS.150</string>
    <string name="label_600">RS.600</string>
    <string name="label_200">RS.200</string>
    <string name="label_160">RS.160</string>
    <string name="label_250">RS.250</string>
    <string name="label_300">RS.300</string>
    <string name="label_400">RS.400</string>
    <string name="label_450">RS.450</string>
    <string name="label_330">RS.330</string>

    <string name="edt_Username">IT22326522</string>
    <string name="edt_Password">12321254698</string>
    <string name="edt_qty1">1</string>
    <string name="edt_qty2">2</string>
    <string name="edt_time">4.00–4.15</string>
    <string name="edt_Fname">Mahimi</string>
    <string name="edt_email">it22326522@my.sliit.lk</string>
    <string name="edt_Acc">23564875269</string>
    <string name="edt_exp">12/12/2025</string>

    <string name="btn_login">Login</string>
    <string name="btn_Select">Select</string>
    <string name="btn_Order">Order</string>
    <string name="btn_Add">Add</string>
    <string name="btn_Remove">Remove</string>
    <string name="btn_PlaceOrder">Place Order</string>
    <string name="btn_Plus">+</string>
    <string name="btn_Minus">-</string>
    <string name="btn_Pay">Pay</string>
    <string name="btn_PayLater">Pay Later</string>
    <string name="btn_PayNow">Pay Now</string>
    <string name="btn_Edit">Edit</string>
    <string name="btn_Save">Save</string>
    <string name="btn_Register">Register</string>
    <string name="btn_Breakfast">Breakfast</string>
    <string name="btn_Lunch">Lunch</string>
    <string name="btn_TeaTime">TeaTime</string>
    <string name="btn_start">Get Started</string>
</resources>
