<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_orange"
    tools:context=".MainActivity10">

    <EditText
        android:id="@+id/fname"
        android:layout_width="279dp"
        android:layout_height="51dp"
        android:autofillHints="@string/edt_Fname"
        android:ems="10"
        android:hint="@string/edt_Fname"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/username"
        android:layout_width="279dp"
        android:layout_height="51dp"
        android:autofillHints="@string/edt_Username"
        android:ems="10"
        android:hint="@string/edt_Username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_Reg"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView31"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_Username"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fname"
        app:layout_constraintVertical_bias="0.5" />


    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_Password"
        app:layout_constraintBottom_toTopOf="@+id/PasswordR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailR"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        app:layout_constraintBottom_toTopOf="@+id/EmailR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_Fname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_Acc"
        app:layout_constraintBottom_toTopOf="@+id/Acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordR"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_exp"
        app:layout_constraintBottom_toTopOf="@+id/exp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Acc"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_dark"
        android:onClick="buttonClickRegister"
        android:text="@string/btn_Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exp"
        app:layout_constraintVertical_bias="0.29" />

    <EditText
        android:id="@+id/EmailR"
        android:layout_width="276dp"
        android:layout_height="49dp"
        android:autofillHints="@string/edt_email"
        android:ems="10"
        android:hint="@string/edt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/textView29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/PasswordR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edt_Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/textView32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/Acc"
        android:layout_width="168dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/edt_Acc"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textView33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edt_exp"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/btnregister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_ifReg"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loginR"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnregister"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/loginR"
        android:layout_width="137dp"
        android:layout_height="41dp"
        android:backgroundTint="@color/button_dark"
        android:onClick="buttonClickLogin"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/btnregister"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>