<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_orange"
    tools:context=".MainActivity9">

    <Button
        android:id="@+id/btnsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/button_dark"
        android:onClick="buttonClickSaveF"
        android:text="@string/btn_Save"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnEdit"
        app:layout_constraintTop_toBottomOf="@+id/Acc"
        app:layout_constraintVertical_bias="0.027" />

    <EditText
        android:id="@+id/fn1ame"
        android:layout_width="279dp"
        android:layout_height="51dp"
        android:autofillHints="IT22326522"
        android:ems="10"
        android:inputType="text"
        android:text="@string/edt_Username"
        app:layout_constraintBottom_toTopOf="@+id/textView29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="279dp"
        android:layout_height="51dp"
        android:autofillHints="Mahimi"
        android:ems="10"
        android:inputType="text"
        android:text="@string/edt_Fname"
        app:layout_constraintBottom_toTopOf="@+id/textView28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_Profile"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView31"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_Username"
        app:layout_constraintBottom_toTopOf="@+id/fn1ame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fname"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_Password"
        app:layout_constraintBottom_toTopOf="@+id/PasswordR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fn1ame"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_Fname"
        app:layout_constraintBottom_toTopOf="@+id/fname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/label_Acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordR" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="132dp"
        android:backgroundTint="@color/button_dark"
        android:onClick="buttonClickEdit"
        android:text="@string/btn_Edit"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView6"
        app:layout_constraintEnd_toStartOf="@+id/btnsave"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Acc"
        app:layout_constraintVertical_bias="0.503" />

    <EditText
        android:id="@+id/PasswordR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="112856565"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/edt_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29"
        tools:ignore="LabelFor,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/Acc"
        android:layout_width="168dp"
        android:layout_height="53dp"
        android:autofillHints="4568525"
        android:ems="10"
        android:inputType="number"
        android:text="@string/edt_Acc"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32"
        app:layout_constraintVertical_bias="0.022"
        tools:ignore="LabelFor" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView6"
        android:layout_width="410dp"
        android:layout_height="49dp"
        android:layout_marginTop="684dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/homeNavig"
                android:layout_width="142dp"
                android:layout_height="match_parent"
                android:onClick="homeNavig"
                app:srcCompat="@drawable/home" />

            <ImageView
                android:id="@+id/orderNavig"
                android:layout_width="137dp"
                android:layout_height="match_parent"
                android:onClick="orderNavig"
                app:srcCompat="@drawable/clipboard" />

            <ImageView
                android:id="@+id/profileNavig"
                android:layout_width="131dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/user" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>