<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_orange"
    tools:context=".MainActivity8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout23"
        android:layout_width="379dp"
        android:layout_height="96dp"
        android:background="@color/secondary_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_PayNow"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_Success"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="15dp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_OrderID"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_PayNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_dark"
        android:onClick="buttonClicknow"
        android:text="@string/btn_PayNow"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout23"
        app:layout_constraintEnd_toStartOf="@+id/btn_PayLater"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVreiew21"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_PayLater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_dark"
        android:onClick="buttonClicklater"
        android:text="@string/btn_PayLater"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_PayNow"
        app:layout_constraintTop_toBottomOf="@+id/textVreiew21"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textVreiew21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_PaymentOptions"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_PayNow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>